--- a/_testing/index.html
+++ b/_testing/index.html
@@ -1,17 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-   
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
-    <textarea id="text-input" rows="10" cols="50" placeholder="Paste your text here..."></textarea><br>
-    <button id="submit-button">Submit</button>
-    <p id="result">Result: </p>
+    <div class="container text-center py-5">
+
+        <section id="counters">
+            <h2 class="py-5 ">COUNT CHARACTERS</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <textarea id="input-count-characters" rows="10" class="form-control" placeholder="Paste your text here..."></textarea>
+                    <button id="button-count-characters" class="btn btn-primary mt-3">Submit</button>
+                    <p id="result-count-characters">Result: </p>
+                </div>
+            </div>
+            <hr>
+            <h2 class="py-5">COUNT PARAGRAPHS</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <textarea id="input-count-paragraphs" rows="10" class="form-control" placeholder="Paste your text here..."></textarea>
+                    <button id="button-count-paragraphs" class="btn btn-primary mt-3">Submit</button>
+                    <p id="result-count-paragraphs">Result: </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- XML SITEMAPS From Text -->
+        <section id="xml-sitemaps-text">
+            <h2 class="py-5">XML SITEMAPS From Text</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <textarea id="xmlContent" rows="10" class="form-control" placeholder="Paste your XML sitemap content here..."></textarea>
+                    <button onclick="handleXmlContentGetUrls()" class="btn btn-primary mt-3">Extract URLs</button>
+                    <pre id="result-get-urls-from-xml-text" class="mt-3"></pre>
+                </div>
+            </div>
+        </section>
+        <hr>
+
+         <!-- XML SITEMAPS From File Upload -->
+         <section id="xml-sitemaps-upload">
+            <h2 class="py-5">XML SITEMAPS From File Upload</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <input type="file" id="sitemapFile" class="form-control" accept=".xml" />
+                    <button onclick="handleFileUploadGetSitemapUrlsFromFile()" class="btn btn-primary mt-3">Extract URLs</button>
+                    <textarea id="outputFile" rows="10" class="form-control mt-3" readonly></textarea>
+                </div>
+            </div>
+        </section>
+        <hr>
+
+        <!-- XML SITEMAPS From URL -->
+        <section id="xml-sitemaps-url">
+            <h2 class="py-5">XML SITEMAPS From URL</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <label for="sitemapUrl">Enter Sitemap URL:</label>
+                    <input type="url" id="sitemapUrl" class="form-control" placeholder="https://example.com/sitemap.xml"  accept=".xml,.xml.gz" />
+                    <button onclick="handleExtractUrlsGetSitemapUrlsFromUrl()" class="btn btn-primary mt-3">Extract URLs</button>
+                    <textarea id="outputUrl" rows="10" class="form-control mt-3" readonly></textarea>
+                </div>
+            </div>
+        </section>
+        <hr>
+
+       
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="../js/getSitemapUrlsFromFile.js"></script>
+    <script src="../js/getSitemapUrlsFromText.js"></script>
+    <script src="../js/getSitemapUrlsFromUrl.js"></script>
+    <script src="../js/countCharacters.js"></script>
+    <script src="../js/countWords.js"></script>
+    <script src="../js/countParagraphs.js"></script>
+    <script src="../js/countSentences.js"></script>
+    <script src="../js/countTokens.js"></script>
+    <script src="script.js"></script>
 </body>
-<script src="countParagraphs.js"></script>
-<script src="script.js"></script>
+
 </html>
