--- a/_testing/getSitemapUrlsFromUrl.html
+++ b/_testing/getSitemapUrlsFromUrl.html
@@ -76,6 +76,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.4/pako.min.js"></script>
+
     <script src="../js/getSitemapUrlsFromFile.js"></script>
     <script src="../js/getSitemapUrlsFromText.js"></script>
     <script src="../js/getSitemapUrlsFromUrl.js"></script>
