--- a/_testing/main.html
+++ b/_testing/main.html
@@ -12,6 +12,8 @@
     <div class="container text-center py-5">
 
         <section id="counters">
+
+            <!-- COUNT CHARACTERS -->
             <h2 class="py-5 ">COUNT CHARACTERS</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
@@ -21,6 +23,19 @@
                 </div>
             </div>
             <hr>
+
+            <!-- COUNT CHARACTERS NO WHITESPACE -->
+            <h2 class="py-5 ">COUNT CHARACTERS NO WHITESPACE</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <textarea id="input-count-characters-no-whitespace" rows="10" class="form-control" placeholder="Paste your text here..."></textarea>
+                    <button id="button-count-characters-no-whitespace" class="btn btn-primary mt-3">Submit</button>
+                    <p id="result-count-characters-no-whitespace">Result: </p>
+                </div>
+            </div>
+            <hr>
+
+            <!-- COUNT PARAGRAPHS -->
             <h2 class="py-5">COUNT PARAGRAPHS</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
@@ -29,6 +44,8 @@
                     <p id="result-count-paragraphs">Result: </p>
                 </div>
             </div>
+
+
         </section>
 
         <!-- XML SITEMAPS From Text -->
@@ -44,8 +61,8 @@
         </section>
         <hr>
 
-         <!-- XML SITEMAPS From File Upload -->
-         <section id="xml-sitemaps-upload">
+        <!-- XML SITEMAPS From File Upload -->
+        <section id="xml-sitemaps-upload">
             <h2 class="py-5">XML SITEMAPS From File Upload</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
@@ -63,30 +80,21 @@
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <label for="sitemapUrl">Enter Sitemap URL:</label>
-                    <input type="url" id="sitemapUrl" class="form-control" placeholder="https://example.com/sitemap.xml"  accept=".xml,.xml.gz" />
+                    <input type="url" id="sitemapUrl" class="form-control" placeholder="https://example.com/sitemap.xml" accept=".xml,.xml.gz" />
                     <button onclick="handleExtractUrlsGetSitemapUrlsFromUrl()" class="btn btn-primary mt-3">Extract URLs</button>
                     <textarea id="outputUrl" rows="10" class="form-control mt-3" readonly></textarea>
                 </div>
             </div>
         </section>
-        <hr>
-
-       
 
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.0.4/pako.min.js"></script>
 
-    <script src="../js/getSitemapUrlsFromFile.js"></script>
-    <script src="../js/getSitemapUrlsFromText.js"></script>
-    <script src="../js/getSitemapUrlsFromUrl.js"></script>
-    <script src="../js/countCharacters.js"></script>
-    <script src="../js/countWords.js"></script>
-    <script src="../js/countParagraphs.js"></script>
-    <script src="../js/countSentences.js"></script>
-    <script src="../js/countTokens.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="../js/countParagraphs.js"></script> -->
+    <!-- <script src="../js/countSentences.js"></script> -->
+    <!-- <script src="../js/countTokens.js"></script> -->
+    <!-- <script src="serp.js"></script> -->
 </body>
 
 </html>
